feat: migrating from mybatis to spring jpa